# vala-oauth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: resource.xml  vala-oauth.ui  vala-oauth.vala
